# boot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  database.md  dependency-injection.md  getting-started.md  http-adapters.md  lifecycle.md  spring-comparison.md
docs/decisions/: ADR-001-python-toolchain.md  ADR-002-env-var-naming.md  ADR-003-logger-category-separator.md  ADR-004-logger-backend.md  ADR-005-pbe1-des-emulation.md  ADR-006-rc2-rc4-omitted.md  ADR-007-logger-level-ordering.md  ADR-008-config-level-keys.md  ADR-009-per-instance-logger-cache.md  ADR-010-pydbc-template-bundled-in-boot-pydbc.md  ADR-011-cdi-config-via-ctx-get.md  ADR-012-cdi-lifecycle-methods-synchronous.md  ADR-013-managed-flyway-synchronous-init.md
