[project]
name = "alt-python-boot"
version = "1.0.1"
description = "alt-python/boot monorepo — pysypt, config, logger"
requires-python = ">=3.12"
dependencies = [
    "alt-python-common",
    "alt-python-pysypt",
    "alt-python-config",
    "alt-python-logger",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/pysypt",
    "packages/config",
    "packages/logger",
    "packages/example-1-1-intro-config",
    "packages/example-1-2-intro-logger",
]

[tool.uv.sources]
alt-python-common = { workspace = true }
alt-python-pysypt = { workspace = true }
alt-python-config = { workspace = true }
alt-python-logger = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
