[project]
name = "alt-python-boot"
version = "1.0.1"
description = "alt-python/boot monorepo — pysypt, config, logger"
requires-python = ">=3.12"
dependencies = [
    "alt-python-common",
    "alt-python-pysypt",
    "alt-python-config",
    "alt-python-logger",
    "alt-python-cdi",
    "alt-python-boot-lib",
    "example-1-3-intro-cdi",
    "example-1-4-intro-cdi-advanced",
    "example-1-5-intro-boot",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/pysypt",
    "packages/config",
    "packages/logger",
    "packages/cdi",
    "packages/example-1-1-intro-config",
    "packages/example-1-2-intro-logger",
    "packages/example-1-3-intro-cdi",
    "packages/example-1-4-intro-cdi-advanced",
    "packages/example-1-5-intro-boot",
    "packages/boot",
]

[tool.uv.sources]
alt-python-common = { workspace = true }
alt-python-pysypt = { workspace = true }
alt-python-config = { workspace = true }
alt-python-logger = { workspace = true }
alt-python-cdi = { workspace = true }
alt-python-boot-lib = { workspace = true }
example-1-3-intro-cdi = { workspace = true }
example-1-4-intro-cdi-advanced = { workspace = true }
example-1-5-intro-boot = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
