[project]
name = "alt-python-boot"
version = "1.0.1"
description = "alt-python/boot monorepo — pysypt, config, logger"
requires-python = ">=3.12"
dependencies = [
    "alt-python-common",
    "alt-python-pysypt",
    "alt-python-config",
    "alt-python-logger",
    "alt-python-cdi",
    "alt-python-boot-lib",
    "alt-python-boot-pydbc",
    "alt-python-flyway",
    "alt-python-boot-flyway",
    "alt-python-boot-pynosqlc",
    "alt-python-boot-aws-lambda",
    "alt-python-boot-azure-function",
    "alt-python-boot-gcp-cloudfunction",
    "example-1-3-intro-cdi",
    "example-1-4-intro-cdi-advanced",
    "example-1-5-intro-boot",
    "example-3-1-serverless-lambda",
    "example-3-2-serverless-azure-function",
    "example-3-3-serverless-gcp-cloudfunction",
    "example-5-2-persistence-pydbc",
    "example-5-3-persistence-flyway",
    "example-5-4-persistence-flyway-multidb",
    "example-5-5-persistence-nosql",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/pysypt",
    "packages/config",
    "packages/logger",
    "packages/cdi",
    "packages/example-1-1-intro-config",
    "packages/example-1-2-intro-logger",
    "packages/example-1-3-intro-cdi",
    "packages/example-1-4-intro-cdi-advanced",
    "packages/example-1-5-intro-boot",
    "packages/boot",
    "packages/boot-pydbc",
    "packages/flyway",
    "packages/boot-flyway",
    "packages/boot-pynosqlc",
    "packages/boot-aws-lambda",
    "packages/boot-azure-function",
    "packages/boot-gcp-cloudfunction",
    "packages/example-3-1-serverless-lambda",
    "packages/example-3-2-serverless-azure-function",
    "packages/example-3-3-serverless-gcp-cloudfunction",
    "packages/example-5-2-persistence-pydbc",
    "packages/example-5-3-persistence-flyway",
    "packages/example-5-4-persistence-flyway-multidb",
    "packages/example-5-5-persistence-nosql",
]

[tool.uv.sources]
alt-python-common = { workspace = true }
alt-python-pysypt = { workspace = true }
alt-python-config = { workspace = true }
alt-python-logger = { workspace = true }
alt-python-cdi = { workspace = true }
alt-python-boot-lib = { workspace = true }
alt-python-boot-pydbc = { workspace = true }
alt-python-flyway = { workspace = true }
alt-python-boot-flyway = { workspace = true }
alt-python-boot-pynosqlc = { workspace = true }

alt-python-boot-aws-lambda = { workspace = true }
alt-python-boot-azure-function = { workspace = true }
alt-python-boot-gcp-cloudfunction = { workspace = true }
example-1-3-intro-cdi = { workspace = true }
example-1-4-intro-cdi-advanced = { workspace = true }
example-1-5-intro-boot = { workspace = true }
example-3-1-serverless-lambda = { workspace = true }
example-3-2-serverless-azure-function = { workspace = true }
example-3-3-serverless-gcp-cloudfunction = { workspace = true }
example-5-2-persistence-pydbc = { workspace = true }
example-5-3-persistence-flyway = { workspace = true }
example-5-4-persistence-flyway-multidb = { workspace = true }
example-5-5-persistence-nosql = { workspace = true }

[dependency-groups]
dev = [
    "flask>=3.1.3",
    "functions-framework>=3.10.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
